# advent-of-code

./: .gitignore  README.md  day-05  day-07_temp.js  day-12_TEMP.js  day-15_2  day-15_scratch  day-19_temp.js  day-23_scratch.js  index.html  loadTodayInput.js  package-lock.json  package.json  preloadAllInputFiles.js  preparations.js  utils.js  utils.py
2021/: 05_scratch.py  06_scratch.py  README.md  deps.edn
2023/: preparations.js
day-00/: task.js
day-01/: task.js
day-02/: task.js
day-03/: task.js
day-05/: task.js
day-06/: task.js
day-07/: task.js
day-08/: task.js
day-09/: task.js
day-09_p2_wrong/: task.js
day-1/: task.js
day-10/: task.js
day-11/: task.js
day-12/: path1.txt  task.js
day-13/: task.js
day-14/: task.js
day-15_dirty/: day-15_2  day-15_scratch.js
day-16/: task.js
day-17/: part1loop.txt  part2loop.txt  task.js
day-18/: task.js
day-19/: task.js
day-19_not_solved/: task.js
day-2/: task.js
day-20/: task.js
day-21/: task.js
day-22/: input.txt  inputTEST.txt  task.js
rust/: Cargo.toml  README.md  results.md
rust/src/: answer.rs  aoc_day.rs  aoc_year.rs  main.rs  y2020.rs  y2022.rs  y2023.rs
rust/src/y2020/: day00.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs
rust/src/y2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day22_todo.rs  day23.rs  day24.rs  day25.rs
rust/src/y2023/: day14.rs
viz/: 2015.html  (+5 more)
(+271 files in other folders)
