[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
fxhash = "0.2.1"
ndarray = "0.15.6"
regex = "1.7.0"
itertools = "0.10.5"